--- a/src/Soenneker.Quark.Containers.csproj
+++ b/src/Soenneker.Quark.Containers.csproj
@@ -41,6 +41,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Soenneker.Quark.Components" Version="3.0.25" />
+        <PackageReference Include="Soenneker.Quark.Divs" Version="3.0.10" />
     </ItemGroup>
 </Project>
